k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ethelapp
  labels:
    name: ethelapp
